# portfolio-weightage-eval

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: codeql.yml  compile-check.yml  pre-commit.yml  qa.yml
config/: settings.py
data/: sgx_sectors.csv
src/: exceptions.py  models.py
src/ingestion/: brokerage_client.py  excel_parser.py
src/sector/: cache.py  fetcher.py  fx.py
tests/: conftest.py  test_brokerage_client.py  test_excel_parser.py  test_fx.py  test_models.py  test_sector_fetcher.py
